--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon --inspect src/index.js"
   },
   "repository": {
     "type": "git",
@@ -18,5 +19,9 @@
   "description": "",
   "dependencies": {
     "express": "^4.21.1"
+  },
+  "type": "module",
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
