--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "description": "",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.11.4"
   },
   "type": "module",
   "devDependencies": {
