--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   "homepage": "https://github.com/Love-HCMUT/Student_Smart_Printing_Service_BE#readme",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-session": "^1.18.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.4",
     "swagger-jsdoc": "^6.2.8",
