--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
+    "ioredis": "^5.4.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.4",
     "redis": "^4.7.0",
