--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -33,7 +33,7 @@ jobs:
                 
             - name: ssh to server 
               run: | 
-                ssh -o StrictHostKeyChecking=no -i "my-server.pem" ubuntu@ec2-52-194-193-253.ap-northeast-1.compute.amazonaws.com << EOF
+                ssh -o StrictHostKeyChecking=no -i "my-server.pem" ubuntu@ec2-54-169-143-19.ap-southeast-1.compute.amazonaws.com << EOF
                   cd /home/ubuntu/
                   sudo docker-compose down 
                   sudo docker-compose pull 
