--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -11,6 +11,11 @@ jobs:
         steps: 
             - name: checkout repository 
               uses: actions/checkout@v3
+            
+            - name: create .env
+              env: 
+                ENV: ${{ secrets.ENV }} 
+              run: echo "$ENV" | base64 -d > .env
 
             - name: login dockerhub
               uses: docker/login-action@v3
