--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
+    "express-validator": "^7.2.0",
     "fs": "^0.0.1-security",
     "ioredis": "^5.4.1",
     "minio": "^8.0.2",
