--- a/.github/workflows/aws-deploy.yml
+++ b/.github/workflows/aws-deploy.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
-      
+              
       - name: Remove old Docker image from ECR
         run: |
           aws ecr batch-delete-image --repository-name assignment-backend --image-ids imageTag=latest || true
@@ -37,6 +37,7 @@ jobs:
           REPOSITORY: assignment-backend
           IMAGE_TAG:  latest     
         run: |
+          docker rmi -f ${{ secrets.ECR_REGISTRY }}/assignment-backend:latest || true
           docker build -t $REPOSITORY .
           docker tag $REPOSITORY:$IMAGE_TAG $REGISTRY/$REPOSITORY:$IMAGE_TAG
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
